# nonstd

./: .bumpversion.cfg  README.md  beta.py  pyproject.toml
nonstd/: derivative.py  dict_ops.py  distributions.py  frozen.py  list.py  logging.py  representation.py  sequence.py  sequence_math.py  sequences.py  timer.py
tests/: conftest.py  test_distributions.py  test_flexible_sequence.py  test_list.py  test_offset_list.py  test_one_indexed_list.py  test_range_dict.py  test_sequence.py  test_sequence_math.py  test_sequences.py
tests/distributions/: test_distributions.py  test_from_quantiles.py
