[tool.poetry]
name = "nonstd"
version = "0.0.4"
description = "Tom's non-standard library of useful classes and functions."
authors = ["tadamcz <tadamczewskipublic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tadamcz/nonstd"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = ">=1,<1.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-pycharm = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

