[tool.poetry]
name = "nonstd"
version = "0.0.5"
description = "Tom's non-standard library of useful classes and functions."
authors = ["tadamcz <tadamczewskipublic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tadamcz/nonstd"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-pycharm = "^0.7.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest-kwparametrize = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100